fix color poster overflow text

--- a/src/sass/partials/_main-page.scss
+++ b/src/sass/partials/_main-page.scss
@@ -119,7 +119,7 @@
       &:active .film-poster__overflow {
         transform: translateY(0%);
         background: rgba(0, 0, 0, 0.85);
-        color: $text-color-light;
+        color: hsla(0, 0%, 100%, 0.75);
         visibility: visible;
       }
     }
